# Cosmic-Adventure-Game-qt-qml

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
qml/: main.qml
qml/components/: Background.qml  Credits.qml  CreditsMenu.qml  CustomButton.qml  Enemy.qml  Explosion.qml  GameMenu.qml  GameMessage.qml  GameOver.qml  HUD.qml  HelpMenu.qml  Laser.qml  LeaderboardMenu.qml  Level.qml  LevelSelect.qml  MainMenu.qml  PauseMenu.qml  Platform.qml  Player.qml  PowerUp.qml  ScorePopup.qml  Settings.qml  SettingsMenu.qml  SpaceEnemy.qml  SpaceHero.qml  Star.qml  Victory.qml  VictoryMenu.qml
qml/scenes/: GameScene.qml  MainMenu.qml
qml/styles/: Theme.qml
src/: gameengine.cpp  gameengine.h  main.cpp
